--- a/css/wyang.css
+++ b/css/wyang.css
@@ -213,18 +213,31 @@ hr.panel {
   }
 }
 
+
 .modal-content {
+  max-width:calc(100% - 80px);
+  max-height:calc(100% - 80px);
+  background-color: black;
+  margin: auto;
+  padding-bottom: 40px;
+  outline: 0;
+  width: 600px;
+}
+
+/*.modal-content {
   margin: auto;
   background-color: black;
   position: relative;
   padding: 0;
   padding-bottom: 40px;
   outline: 0;
-  width: 450px;
-}
+  width: 400px;
+}*/
 
 .scroll {
   margin: 0 auto;
+  max-width:calc(100% - 80px);
+  max-height:calc(100% - 80px);
   background-color: black;
   width: 400px;
   height: 200px;
